--- a/assignments/assignment-3/package.json
+++ b/assignments/assignment-3/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "assignment-3",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "me",
-  "license": "ISC",
-  "dependencies": {
-    "uuid": "^9.0.0"
-  }
+    "name": "assignment-3",
+    "version": "1.0.0",
+    "description": "stories app api",
+    "main": "server.js",
+    "scripts": {
+        "start:dev": "nodemon server.js"
+    },
+    "author": "me",
+    "license": "ISC",
+    "dependencies": {
+        "uuid": "^9.0.0"
+    }
 }
