Build Inventory Management App using express prisma

--- a/lectures/lecture-23/inventory-management-system/.env
+++ b/lectures/lecture-23/inventory-management-system/.env
@@ -1,1 +1,1 @@
-DB_URL=mongodb+srv://Pokizasdv:Pokiza94@lectures.u022qds.mongodb.net/?retryWrites=true&w=majority
+DB_URL=mongodb+srv://pokizasdv:Kl9Vg6o4gINlCjg3@inventory-management-ap.ah9a7hm.mongodb.net/inventory-management-app?retryWrites=true&w=majority
